--- a/000-dmr/001.intro.md
+++ b/000-dmr/001.intro.md
@@ -6,8 +6,10 @@ paginate: true
 ---
 # Bibendum, the Aligot & Truffade Chef
 ### With SLMs, RAG, Agents, Tools & MCP
-> But with very small **S**LMs 🐣
+> But with (very) small **S**LMs 🐣
+> And 🐳 Docker Model Runner
 
 </br></br></br></br></br>
 
-#### 🤗 Merci 🌋 Volcamp
+#### 🤗 Thank you 🌋 Volcamp
+https://github.com/whales-collective/volcamp-2025
