--- a/500-assistant-with-tools/001.1-function-calling.md
+++ b/500-assistant-with-tools/001.1-function-calling.md
@@ -18,7 +18,6 @@ It is the ability of certain models to **recognize** when a function should be c
 
 ## Tips when defining your tools
 
-- Use clear and explicit names
-- Add descriptions
-- Define (<span class="dodgerblue">**fixed**</span>) parameters and their types
-- Specify required parameters
+- Use clear and <span class="dodgerblue">**explicit names**</span>, add <span class="dodgerblue">**descriptions**</span>
+- Define (<span class="dodgerblue">**fixed**</span>) parameters and their types, specify <span class="dodgerblue">**required**</span> parameters
+- https://www.linkedin.com/posts/pamela-s-fox_if-youre-writing-mcp-servers-or-any-tools-activity-7377346800476663808-naas/
