--- a/000-dmr/009.docker.model.runner.md
+++ b/000-dmr/009.docker.model.runner.md
@@ -17,7 +17,7 @@ paginate: true
 - Docker plugin `==` <span class="dodgerblue">**LLM Engine**</span> (based on llama.cpp)
   - **DMR Base URLs:**
     - From Containers: `http://model-runner.docker.internal/`
-    - FROM Host: `http://localhost:12434/`
+    - From Host: `http://localhost:12434/`
   - <span class="indianred">**OpenAI API Compatible**</span> (ex: 🦙Ollama, AI frameworks...)
 
 
