--- a/105-bot-context-instructions/005.quick-demo.md
+++ b/105-bot-context-instructions/005.quick-demo.md
@@ -9,4 +9,4 @@ paginate: true
   color: dodgerblue;
 }
 </style>
-# 🐳🤖 DMR with OpenAI Golang SDK & `more context` + `memory` 🤣
+# 🐳🤖 DMR with OpenAI Golang SDK & `more context` + **`memory`**
