--- a/106-agentic-compose-bot-aligot-truffade/004.demo.md
+++ b/106-agentic-compose-bot-aligot-truffade/004.demo.md
@@ -15,7 +15,7 @@ paginate: true
 docker compose up --build -d
 docker compose attach bibendum_v0
 ```
-- Origine de l'aligot
-- Recette de la truffade
-- Accompagnement
-- Quelles sont les variantes régionales de la truffade ?
+- [brief] Quelle est l'origine de l'aligot ?
+- [step-by-step] Quelle est la recette de la truffade?
+- Quel vin en accompagnement ?
+- Quelles sont les variantes régionales de la truffade ? 😜
