--- a/300-docker-agentic-compose-with-rag/002.what-is-rag.md
+++ b/300-docker-agentic-compose-with-rag/002.what-is-rag.md
@@ -15,7 +15,7 @@ paginate: true
 ## Make context smaller and more relevant
 
 ## Helping the model remember large amounts of information
-- Language models have a **context limit** (e.g., 4K, 16K, [32K tokens](https://qwenlm.github.io/blog/qwen2.5-llm/#model-card))
+- Language models have a **context limit** 
 - By breaking information into **chunks**, we can **store** and **retrieve**
   information **beyond** this limit.
 - <span class="dodgerblue">**Better focus**</span>
