--- a/300-docker-agentic-compose-with-rag/006.demo.md
+++ b/300-docker-agentic-compose-with-rag/006.demo.md
@@ -17,7 +17,7 @@ paginate: true
 docker compose up --build -d
 docker compose attach bibendum
 ```
-- Origine de l'aligot
-- Recette de la truffade
-- Accompagnement
+- [brief] Quelle est l'origine de l'aligot ?
+- [step-by-step] Quelle est la recette de la truffade?
+- Quel vin en accompagnement ?
 - Quelles sont les variantes régionales de la truffade ?
