--- a/500-assistant-with-tools/006.demo.md
+++ b/500-assistant-with-tools/006.demo.md
@@ -22,7 +22,7 @@ npx @modelcontextprotocol/inspector
 
 docker compose attach augmented-bibendum
 ```
-- Origine de l'aligot
-- Recette de la truffade
-- Accompagnement
+- [brief] Quelle est l'origine de l'aligot ?
+- [step-by-step] Quelle est la recette de la truffade?
+- Quel vin en accompagnement ?
 - Quelles sont les variantes régionales de la truffade ?
